--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/js/object-reader.js",
   "scripts": {
     "test": "mocha tests/main.js",
-    "compile": "webpack --config webpack.config.js"
+    "build": "npm run compile:dev && npm run compile:prod",
+    "compile:dev": "webpack --config webpack.config.js",
+    "compile:prod": "PRODUCTION=true webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -25,8 +27,12 @@
   },
   "homepage": "https://github.com/montaque22/object-reader#readme",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "mocha": "^3.0.2",
-    "uglifyjs-webpack-plugin": "^0.4.6"
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack-closure-compiler": "^2.1.5"
   }
 }
