--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A safe way to access and manipulate object properties and arrays",
   "main": "src/js/object-reader.js",
   "scripts": {
-    "test": "mocha tests/main.js",
+    "test": "mocha --compilers js:node_modules/babel-core/register tests/main.js",
     "build": "npm run compile:dev && npm run compile:prod",
     "compile:dev": "webpack --config webpack.config.js",
     "compile:prod": "PRODUCTION=true webpack --config webpack.config.js"
