--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "montaque-objectreader",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A safe way to access and manipulate object properties and arrays",
-  "main": "src/js/object-reader.js",
+  "main": "dist/object-reader.js",
   "scripts": {
+    "start": "webpack-dev-server --open --config webpack.dev.js",
     "test": "mocha --compilers js:node_modules/babel-core/register tests/main.js",
-    "build": "npm run compile:dev && npm run compile:prod",
-    "compile:dev": "webpack --config webpack.config.js",
-    "compile:prod": "PRODUCTION=true webpack --config webpack.config.js"
+    "build": "webpack --config webpack.prod.js && PRODUCTION=true webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -29,10 +28,14 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "mocha": "^3.0.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack-closure-compiler": "^2.1.5"
+    "webpack-closure-compiler": "^2.1.5",
+    "webpack-merge": "^4.1.0",
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
